--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
-    "puppeteer": "^13.3.2"
+    "puppeteer": "^13.3.2",
+    "redis": "^4.0.4"
   }
 }
